--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>End Portal</title>
+    <link rel="shortcut icon" href="./images/blog.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -23,6 +24,25 @@
                 </div>
         </nav>
     </section>
+    <hr>
+
+    <!-- catagories section  -->
+    <section>
+        <nav class="navbar bg-light">
+            <div class="container justify-content-center">
+                <button class="btn btn-outline-success mx-2 my-2">Home</button>
+                <button class="btn btn-outline-success mx-2 my-2">Breaking news</button>
+                <button class="btn btn-outline-success mx-2 my-2">Regular news</button>
+                <button class="btn btn-outline-success mx-2 my-2">International news</button>
+                <button class="btn btn-outline-success mx-2 my-2">Sports</button>
+                <button class="btn btn-outline-success mx-2 my-2">Entertainment</button>
+                <button class="btn btn-outline-success mx-2 my-2">Culture</button>
+                <button class="btn btn-outline-success mx-2 my-2">Arts</button>
+                <button class="btn btn-outline-success mx-2 my-2">All news</button>
+            </div>
+        </nav>
+    </section>
+
 
 
 
