load categories data

--- a/index.html
+++ b/index.html
@@ -29,28 +29,11 @@
     <!-- catagories section  -->
     <section>
         <nav class="navbar bg-light">
-            <div class="container justify-content-center">
-                <button class="btn btn-outline-success mx-2 my-2">Home</button>
-                <button class="btn btn-outline-success mx-2 my-2">Breaking news</button>
-                <button class="btn btn-outline-success mx-2 my-2">Regular news</button>
-                <button class="btn btn-outline-success mx-2 my-2">International news</button>
-                <button class="btn btn-outline-success mx-2 my-2">Sports</button>
-                <button class="btn btn-outline-success mx-2 my-2">Entertainment</button>
-                <button class="btn btn-outline-success mx-2 my-2">Culture</button>
-                <button class="btn btn-outline-success mx-2 my-2">Arts</button>
-                <button class="btn btn-outline-success mx-2 my-2">All news</button>
+            <div id="category-container" class="container justify-content-center">
+
             </div>
         </nav>
     </section>
-
-
-
-
-
-
-
-
-
 
 
 
