news section added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         </nav>
     </section>
 
+    <!-- news sectioin  -->
+    <section id="news-container" class="my-5">
 
+    </section>
 
 
 
