number of items found

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         </nav>
     </section>
 
+    <section class="bg-light my-4 p-2 text-center">
+        <h3><span id="items-number"></span> items found</h3>
+    </section>
+
     <!-- news sectioin  -->
     <section id="news-container" class="my-5">
 
