--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
         <h3><span id="items-number"></span> items found</h3>
     </section>
 
+    <!-- modal section  -->
+    <section>
+        <div class="modal fade modal-dialog-scrollable" id="detailModal" tabindex="-1" aria-labelledby="modal-label"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modal-label"></h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="news-text"></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- news sectioin  -->
     <section id="news-container" class="my-5">
 
