--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <h3>End <span class="text-success">Portal</span></h3>
                 <div class="d-flex">
                     <button class="btn btn-success mx-2">News</button>
-                    <button class="btn btn-success mx-2">Blog</button>
-                    </>
+                    <button id="question-page" class="btn btn-success mx-2">Questions</button>
                 </div>
         </nav>
     </section>
