--- a/question.html
+++ b/question.html
@@ -11,6 +11,19 @@
 </head>
 
 <body class="bg-light">
+
+    <section>
+        <nav class="navbar ">
+            <div class="container-fluid">
+                <h3>End <span class="text-success">Portal</span></h3>
+                <div class="d-flex">
+                    <button id="news-page" class="btn btn-success mx-2">News</button>
+                    <button id="question-page" class="btn btn-success mx-2">Questions</button>
+                </div>
+        </nav>
+    </section>
+    <hr>
+
     <section class="container my-5 bg-white rounded">
 
         <h1 class="text-center text-success p-4">JavaScript Interview Questions</h1>
