--- a/question.html
+++ b/question.html
@@ -17,8 +17,8 @@
             <div class="container-fluid">
                 <h3>End <span class="text-success">Portal</span></h3>
                 <div class="d-flex">
-                    <button id="news-page" class="btn btn-success mx-2">News</button>
-                    <button id="question-page" class="btn btn-success mx-2">Questions</button>
+                    <a href="index.html" class="btn btn-success mx-2">News</a>
+                    <a href="question.html" class="btn btn-success mx-2">Questions</a>
                 </div>
         </nav>
     </section>
@@ -170,7 +170,6 @@
     </section>
 
 
-    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
