--- a/index.html
+++ b/index.html
@@ -71,8 +71,14 @@
     </section>
 
     <!-- news sectioin  -->
-    <section id="news-container" class="my-4">
+    <section id="news-container" class="my-3">
 
+    </section>
+
+    <!-- footer  -->
+    <section>
+        <p class="bg-white text-secondary py-4 text-center">©2022. End Portal. All rights reserved. Lake,
+            North-America.</p>
     </section>
 
 
