--- a/question.html
+++ b/question.html
@@ -169,6 +169,12 @@
         </div>
     </section>
 
+    <!-- footer  -->
+    <footer>
+        <p class="bg-white text-secondary py-4 text-center">©2022. End Portal. All rights reserved. Lake,
+            North-America.</p>
+    </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
